[package]
name = "bluer-talk"
version = "0.1.0"
edition = "2021"
author = "Sebastian Urban <surban@surban.net>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
uuid = "1.3.1"
